<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.newCourse.NewCourseFragment">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="64dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/course"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputCourseTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/course_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/courseTitleEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputCourseOutline"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/course_outline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputCourseTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/courseOutlineEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputCourseFee"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/course_fee"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputCourseOutline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/courseFeeEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputCourseDuration"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/course_duration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputCourseFee">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/courseDurationEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputStartDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/start_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputCourseDuration"
                    app:startIconDrawable="@drawable/ic_calendar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/startDateEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputEndDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/end_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputStartDate"
                    app:startIconDrawable="@drawable/ic_calendar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/endDateEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/select_job_sector"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/spinnerJobSector"
                    app:layout_constraintStart_toStartOf="@+id/spinnerJobSector" />

                <Spinner
                    android:id="@+id/spinnerJobSector"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="38dp"
                    android:layout_marginEnd="18dp"
                    android:entries="@array/job_sector"
                    android:popupElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inputEndDate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/select_school"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/spinnerSchool"
                    app:layout_constraintStart_toStartOf="@+id/spinnerSchool" />

                <Spinner
                    android:id="@+id/spinnerSchool"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="38dp"
                    android:layout_marginEnd="18dp"
                    android:entries="@array/school"
                    android:popupElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerJobSector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/select_course_category"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/spinnerCourseCategory"
                    app:layout_constraintStart_toStartOf="@+id/spinnerCourseCategory" />

                <Spinner
                    android:id="@+id/spinnerCourseCategory"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="38dp"
                    android:layout_marginEnd="18dp"
                    android:entries="@array/course_category"
                    android:popupElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerSchool" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btSubmit"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_margin="18dp"
                    android:text="@string/submit"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/ic_upload"
                    app:iconGravity="end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btDelete"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerCourseCategory"
                    app:layout_constraintVertical_bias="0.0" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btDelete"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_margin="18dp"
                    android:text="@string/delete"
                    android:visibility="gone"
                    app:cornerRadius="25dp"
                    app:icon="@drawable/ic_delete"
                    app:iconGravity="end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btSubmit"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerCourseCategory"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
